--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -11,9 +11,13 @@
   border-radius: 30px 30px 0 0;
 }
 
+@media (min-width: 768px){
+  .search{
+    padding-top: 20px;
+  }
+}
 
 .responses{
-  position: relative;
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
@@ -38,21 +42,16 @@
   margin-top: 10px;
 }
 .responseDiv:last-child{
-  min-height: 100%;
-}
-
-.responseDiv:last-child #response{
-  padding-bottom: 150px;
+  margin-bottom: 40%;
 }
 .line{
   width: 100%;
   height: 0.08px;
   background-color: grey;
-  opacity: 0.2;
-  margin: 20px 0;
+  opacity: 0.5;
+  margin-top: 10px;
 }
 #response{
-  margin-top: 10px;
   font-family: customFonts;
   max-width: 100%;
   white-space: pre-wrap;
@@ -61,40 +60,6 @@
   overflow-y: hidden;
   pointer-events: none;
   padding: 10px 0;
-  position: relative;
-  
-}
-
-
-.resans *{
-  user-select: text;
-  -webkit-user-select: text;
-  -moz-user-select: text;
-  -ms-user-select: text;
-}
-
-#response p{
-  margin: 0;
-  padding: 0;
-  cursor: text;
-  pointer-events: auto;
-}
-
-.actionBtn
-
-.responseDiv p{
-  font-size: 1em;
-  line-height: 1.5;
-  color: var(--text-color);
-  font-family: GeneralSans-Regular;
-}
-
-.responseDiv{
-  position: relative;
-}
-.responseDiv h1{
-
-  
 }
 
 .header{
@@ -102,7 +67,8 @@
   width: 100%;
   display: flex;
   align-items: center;
-  backdrop-filter: blur(10px);
+  gap: 10px;
+  backdrop-filter: blur(5px);
   position: absolute;
   top: 0;
   left: 0;
@@ -110,183 +76,10 @@
   height: 60px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  padding: 0 10px;
-  z-index: 100;
-}
-
-
-.headRow:first-child{
-  display: flex;
-  align-items: center;
-  flex: 1;
-}
-
-.headRow:last-child{
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  position: relative;
-}
-
-.more-btn{
-  display: flex;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  justify-content: center;
-  position: relative;
-  pointer-events: auto;
-  cursor: pointer;
-  border-radius: 50%;
-}
-
-.more-btn:hover{
-  background-color: var(--header-onscroll);
-}
-
-.more-btn:hover .options{
-  display: flex;
-}
-
-.options{
-  padding: 5px;
-  background-color: var(--dialog-bg);
-  border-radius: 10px;
-  position: absolute;
-  top: 40px;
-  right: 0;
-  z-index: 1000;
-  display: none;
-}
-
-.option{
-  display: flex;
-  gap: 5px;
-  align-items: center;
-  position: relative;
-  pointer-events: auto;
-  cursor: pointer;
-  padding: 10px 15px;
-  border-radius: 10px;
-}
-
-.option:hover{
-  background-color: var(--header-onscroll);
-}
-
-.option span{
-  font-size: 16px;
-}
-
-.option p{
-  font-size: 14px;
-  font-family: GeneralSans-Regular;
+  overflow: hidden;
+  padding: 0 30px;
 }
 
 .header h1{
   font-family: GeneralSans-Medium;
-}
-
-
-
-.actions{
-  margin-top: 20px;
-  margin-bottom: 40px;
-  width: 100%;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  z-index: ;
-}
-
-.actions .bigActions{
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  flex: 3;
-}
-
-.actions .bigActions .actionBtn{
-  display: flex;
-  gap: 5px;
-  align-items: center;
-  justify-content: center;
-  padding: 5px 10px;
-  border-radius: 10px;
-  cursor: pointer;
-  pointer-events: auto;
-  transition: background-color 0.3s ease;
-}
-
-.actions .bigActions .actionBtn span{
-  font-size: 1.2em;
-  margin: 0;
-  padding: 0;
-}
-
-.actions .bigActions .actionBtn p{
-  pointer-events: none !important;
-}
-
-.bigActions .actionBtn span{
-  font-size: 1.1em;
-}
-
-.bigActions .actionBtn p{
-  font-size: 0.8em;
-  color: var(--text-color);
-  margin: 0;
-}
-
-.actions .bigActions .actionBtn:hover{
-  background-color: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(5px);
-}
-
-.actions .quickActions{
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  gap: 10px;
-  flex: 1;
-}
-
-.actions .quickActions .actionBtn{
-  width: 30px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  cursor: pointer;
-  pointer-events: auto;
-  transition: background-color 0.3s ease;
-}
-
-.quickActions .actionBtn span{
-  font-size: 1.1em;
-  margin: 0;
-  padding: 0;
-  
-}
-
-.quickActions .actionBtn:hover{
-  background-color: var(--header-onscroll);
-}
-
-
-@media (min-width: 768px){
-  .search{
-    padding-top: 20px;
-  }
-  .header{
-    padding: 0 30px;
-  }
-}
-
-
-
-.bottom-spacer {
-  height: 1000px; /* Enough to avoid overlay by search box */
 }
