--- a/frontend/src/css/SelectionChip.css
+++ b/frontend/src/css/SelectionChip.css
@@ -5,19 +5,17 @@
 }
 
 .chip{
-  padding: 5px 15px;
+  padding: 5px 10px;
   display: flex;
   align-items: center;
   gap: 5px;
-  /* background: #272e45; */
-  background-color: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(10px);
-  border-radius: 30px;
+  background: #272e45;
+  border-radius: 10px;
   justify-content: space-between;
   cursor: pointer;
 }
 
-.chip span{ 
+.chip span{
   font-size: 16px;
   color: #738ee6;
   padding: 0;
