--- a/frontend/src/css/SmallBtn.css
+++ b/frontend/src/css/SmallBtn.css
@@ -1,6 +1,8 @@
 .smallBtn{
-  height: 40px;
-  aspect-ratio: 1/1;
+  min-height: 40px;
+  min-width: 40px;
+  max-width: 40px;
+  max-height: 40px;
   border-radius: 50%;
   box-shadow: 0, 0 10px rgba(0,0,0,1);
   display: flex;
@@ -10,7 +12,9 @@
   cursor: pointer;
   overflow: hidden;
   position: relative;
+  bbackground: rgba(40,57,70,1);
   cursor: pointer;
+  
 }
 .smallBtn:hover{
   background: var(--button-onhover)
@@ -19,11 +23,10 @@
   pointer-events: none;
 }
 .smallBtn.inactive{
-  background-color: var(--button-bg);
+  opacity: 0.5;
   pointer-events: none;
-  
 }
 .smallBtn.active{
-  background-color: var(--button-active);
+  opacity: 1;
   pointer-events: auto;
 }
