--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -4,21 +4,11 @@ header{
   position: fixed;
   top: 0;
   left: 0;
-  padding: 0 10px;
+  padding: 0 20px;
   display: flex;
   align-items: center;
-  background: rgba(16, 18, 24, 1);
+  background: var(--main-bg);
   z-index: 1;
-}
-
-@media (min-width : 768px){
-  header{
-    position: fixed;
-    top: 0;
-    left: 80px;
-    float: right;
-    width: calc(100% - 80px);
-  }
 }
 
 .headcol{
@@ -26,10 +16,6 @@ header{
   display: flex;
   align-items: center;
   gap: 10px;
-}
-.headcol p{
-  font-weight: 800;
-  font-size: 18px;
 }
 .headcol:nth-child(2){
   text-align: center;
