--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -1,5 +1,7 @@
-@import url('./general-sans.css');
-@import url('./loader.css');
+@font-face {
+  font-family: customFonts;
+  src: url(../assets/linotte.otf);
+}
 *,
 *::after,
 *::before{
@@ -8,31 +10,22 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   text-decoration: none;
-  font-family: GeneralSans-Regular;
+  font-family: customFonts;
   color: var(--main-text);
-  -ms-overflow-style: none;
-  scrollbar-width: none; 
-  cursor: default;
 }
-*::-webkit-scrollbar {
-  display: none;
-}
-
 h1, h2, h3, h4, h5, h6, p, span{
   padding: 0;
   margin: 0;
   pointer-events: none;
 }
 html{
-  height: 100vh;
-  width: 100%;
   scroll-behavior: smooth;
 }
 body{
-  height: 100%;
+  height:100%;
   width: 100%;
-  overflow-y: hidden !important;
-  font-family: GeneralSans-Regular;
+  overflow-y: hidden;
+  font-family: customFonts;
   background: var(--main-bg);
   display: flex;
   flex-direction: column;
@@ -40,13 +33,5 @@ body{
 main{
   height: 100%;
   width: 100%;
-  overflow-y: hidden;
-}
-
-@media (min-width: 768px){
-  main{
-    padding-top: 0;
-    ppadding-left: 80px;
-    background-color: var(--header-onscroll);
-  }
+  padding-top: 60px;
 }
