--- a/frontend/src/css/NavItem.css
+++ b/frontend/src/css/NavItem.css
@@ -1,6 +1,14 @@
 .link{
   flex: 1;
 }
+
+@media (min-width: 768px){
+  .link{
+    flex: 0;
+    aspect-ratio: 1/1;
+  }
+}
+
 .navitem{
   height: 100%;
   display: flex;
