--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -11,11 +11,25 @@ header{
   z-index: 1;
 }
 
+@media (min-width : 768px){
+  header{
+    position: fixed;
+    top: 0;
+    left: 80px;
+    float: right;
+    width: calc(100% - 80px);
+  }
+}
+
 .headcol{
   flex: 1;
   display: flex;
   align-items: center;
   gap: 10px;
+}
+.headcol p{
+  font-weight: 800;
+  font-size: 18px;
 }
 .headcol:nth-child(2){
   text-align: center;
