--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -9,3 +9,21 @@
   gap: 10px;
   padding-bottom: 5px;
 }
+
+@media (min-width: 768px){
+  .navbar{
+    height: 100%;
+    max-width: 80px;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+  }
+}
+
+.logoContainer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+}
