--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -2,7 +2,13 @@
   height: 100%;
   width: 100%;
   overflow-y: scroll;
-  padding: 0 15px 200px;
+  padding: 60px 15px 300px;
+}
+
+@media (min-width: 768px){
+  .search{
+    padding-top: 20px;
+  }
 }
 
 .responseDiv{
@@ -11,6 +17,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  sscroll-margin-top:20px;
 }
 .responseDiv img{
   width: 100%;
