--- a/frontend/src/css/SearchBox.css
+++ b/frontend/src/css/SearchBox.css
@@ -1,14 +1,47 @@
+.searchBoxContainer{
+  width: 100%;
+  padding: 0 15px;
+  position: fixed;
+  bottom: 90px;
+  right: 0;
+  display: flex;
+  justify-content: center;
+}
+
+@media (min-width: 768px){
+  .searchBoxContainer{
+    width: calc(100% - 90px);
+    left: 90px;
+    bottom: 20px;
+  }
+}
+
 .searchBox{
   width: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   align-items: center;
   background: var(--search-bg);
-  border-radius: 45px;
+  border-radius: 20px;
   padding: 10px;
-  position: relative;
   margin-top: 0px;
   transition: border-radius 0.2s ease-in-out;
-  margin-bottom: 20px;
+}
+.searchBoxInputContainer{
+  padding-top: 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.searchBoxButtonContainer{
+  width:100%;
+}
+@media (min-width: 768px){
+  .searchBox{
+    margin-top: 20px;
+    
+  }
 }
 .home .searchBox{
   margin-top: 25px;
@@ -25,4 +58,10 @@
   max-height: 120px;
   word-wrap: break-word;
   resize: none;
+  display: flex;
+  align-items: center;
+}
+
+.blank{
+  flex: 1;
 }
